k8s-frontend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tms-frontend
  labels:
    name: tms-frontend
