k8s-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tms-frontend-prod
  namespace: tms-frontend-prod
  labels:
    app: tms-frontend-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tms-frontend-prod
  template:
    metadata:
      labels:
        app: tms-frontend-prod
    spec:
      imagePullSecrets:
        - name: nexus-regcred
      containers:
        - name: tms-frontend
          image: nexus.superpart.co.th/spp/frontend/tms-prod:latest
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /index.html
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /index.html
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
