k8s-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tms-frontend-service
  namespace: tms-frontend
spec:
  type: ClusterIP
  selector:
    app: tms-frontend-prod
  ports:
    - port: 80
      targetPort: 80
      name: http
